data/all_generated_tests/raw_wast_tests/nop_StackCorruption_90.wast
;; 1. **Test Description**: A sequence of computational instructions that pushes multiple values onto the stack, executed with a `nop` placed in between them. Validate that the stack's final state remains unchanged to ensure `nop` does not corrupt the stack by altering its contents.

(assert_invalid
  (module 
    (func $nop-stack-behavior 
      i32.const 42 
      nop
      i32.const 84 
      drop 
      drop))
  "stack mismatch"
)